# graphql_django_apollo

./: LICENSE  Readme.md
employee_admin/: README.md  pyproject.toml
employee_admin/src/employees/: check_data.py  db.sqlite3  sample_data.py  sample_employee_data.py
employee_admin/src/employees/api/: admin.py  models.py  schema.py
employee_admin/src/employees/api/migrations/: 0001_initial.py
employee_admin/src/employees/employees/: schema.py  settings.py  urls.py
employee_admin_front/: package-lock.json  package.json
employee_admin_front/src/: App.tsx  EmployeeFilteredList.tsx  EmployeeList.tsx  apolloClient.ts
