[project]
name = "employee-admin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "masamune", email = "kenjiii534@gmail.com" }
]
dependencies = [
    "django>=4.2.4",
    "graphene-django>=3.1.5",
    "graphene>=3.3",
    "graphene_django>=3.1.5",
    "django-filter>=23.2",
    "django-cors-headers>=4.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "autopep8>=2.0.2",
    "Faker>=19.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
